paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/cond_op_1/sample_001/target.compile.log
error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/cond_op_1/sample_001/target.rs:22:18
   |
22 |     f2(if true { V_IP } else { 0 });
   |                  ^^^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/cond_op_1/sample_001/target.rs:23:29
   |
23 |     f2(if true { 0 } else { V_IP });
   |                             ^^^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/cond_op_1/sample_001/target.rs:25:32
   |
25 |     f3(if true { C_IP } else { V_IP });
   |                                ^^^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/cond_op_1/sample_001/target.rs:26:18
   |
26 |     f3(if true { V_IP } else { C_IP });
   |                  ^^^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/cond_op_1/sample_001/target.rs:28:17
   |
28 |     f(if true { VP } else { C_CP });
   |                 ^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/cond_op_1/sample_001/target.rs:29:31
   |
29 |     f(if true { C_CP } else { VP });
   |                               ^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/cond_op_1/sample_001/target.rs:31:18
   |
31 |     f4(if true { IP } else { C_IP });
   |                  ^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/cond_op_1/sample_001/target.rs:32:32
   |
32 |     f4(if true { C_IP } else { IP });
   |                                ^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/cond_op_1/sample_001/target.rs:34:18
   |
34 |     f1(if true { VP } else { IP });
   |                  ^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/cond_op_1/sample_001/target.rs:34:30
   |
34 |     f1(if true { VP } else { IP });
   |                              ^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/cond_op_1/sample_001/target.rs:35:18
   |
35 |     f1(if true { IP } else { VP });
   |                  ^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/cond_op_1/sample_001/target.rs:35:30
   |
35 |     f1(if true { IP } else { VP });
   |                              ^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0133`.